hard-gists/4555911/run.log
=== Docker Run Log for 4555911 ===
Started at: Mi 29. Okt 14:43:49 CET 2025

[2025-10-29 14:43:50] START: Running container for 4555911
[2025-10-29 14:43:51] SUCCESS: Container 298368d2288cd9620d11b9ee93aa95c7d210dc4db4105c31866b2f39fa55185f started for 4555911
=== Container logs for 4555911 ===
  File "/snippet.py", line 89
    print "Unable to connect to FTP"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4555911 ===
[2025-10-29 14:43:53] INFO: Container 298368d2288cd9620d11b9ee93aa95c7d210dc4db4105c31866b2f39fa55185f has stopped
